# regret-adapters

./: .gitignore  Makefile  README.md  go.mod  go.sum  settings.gradle.kts
.claude/skills/deploy/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: build.yml  regret-test.yml
agent/: Dockerfile  pyproject.toml
agent/deploy/: agent-dryrun.yaml  deployment.yaml  kind-values.yaml
agent/src/okk_agent/: agent.py  config.py  main.py  prompt.py
agent/src/okk_agent/events/: cron.py  github_poller.py  k8s.py  webhook.py
agent/src/okk_agent/tools/: act.py  observe.py  report.py  state.py
charts/okk/: Chart.yaml  values.yaml
charts/okk/templates/: _helpers.tpl  agent-deployment.yaml  agent-rbac.yaml  agent-secrets.yaml  coordinator-deployment.yaml  worker-deployment.yaml
coordinator/: Dockerfile  go.mod  go.sum
coordinator/internal/config/: config.go
coordinator/internal/proto/: okk.pb.go  okk_vtproto.pb.go
coordinator/internal/task/: manager.go  task.go
coordinator/internal/task/generator/: basickv.go  conditional_put.go  generator.go  streaming_sequence.go
coordinator/proto/: okk.proto
internal/proto/: okk.pb.go  okk_grpc.pb.go  okk_vtproto.pb.go
java/: Dockerfile  build.gradle.kts
java/src/main/java/io/regret/adapter/oxia/: OxiaKVAdapter.java
pilot/: pipeline.yaml
pilot/src/okk_pilot/: pilot.py  pipeline.py
pilot/src/okk_pilot/tools/: invariants.py
worker/jvm/engine/: build.gradle
worker/jvm/engine-oxia/src/main/java/io/github/oxia/worker/engine/oxia/: OxiaEngine.java
